Creating MVC views
Creating Start, Add, View, Edit, Delete sections. For each one
there is a new Controller, View and Model.

--- a/SpanishWords/Views/Home/Index.cshtml
+++ b/SpanishWords/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Spanish Words";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome To Spanish Words!</h1>
+    <h3>Learn Spanish words with flashcards, cutomize words list and track your progress with stats!</h3>
 </div>
