--- a/SpanishWords/Views/Shared/_Layout.cshtml
+++ b/SpanishWords/Views/Shared/_Layout.cshtml
@@ -23,7 +23,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Start" asp-action="Index">Start Training</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Edit" asp-action="Index">Edit words</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Delete" asp-action="Index">Delete words</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Add" asp-action="Index">Add words</a>
                         </li>
                     </ul>
                 </div>
