--- a/SpanishWords/Views/Shared/_Layout.cshtml
+++ b/SpanishWords/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Add" asp-action="Index">Add words</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Word" asp-action="Index">Show words</a>
+                        </li>
                     </ul>
                 </div>
             </div>
