--- a/SpanishWords/Views/AddWord/Add.cshtml
+++ b/SpanishWords/Views/AddWord/Add.cshtml
@@ -2,7 +2,7 @@
 
 
 
-<form mehod="post">
+<form method="post">
     <div class="form-group">
         <label asp-for="@Model.Word.Spanish"></label>
         <input asp-for="@Model.Word.Spanish" class="form-control" />
