Adding Edit column to Show Words page

--- a/SpanishWords/Views/Word/Index.cshtml
+++ b/SpanishWords/Views/Word/Index.cshtml
@@ -14,6 +14,7 @@
                 <th scope="col">Lexical Cat</th>
                 <th scope="col">User</th>
                 <th scope="col">Times Trained</th>
+                    <th scope="col">Action</th>
             </tr>
         </thead>
         <tbody>
@@ -31,6 +32,7 @@
                         <td>@Model.Words[i].LexicalCategory?.Name</td> 
                         <td>@Model.Words[i].User.Login</td>
                         <td>@Model.Words[i].Statistic.TimesTrained</td>
+                        <td><a asp-controller="Add" asp-action="Edit" asp-route-id="@Model.Words[i].Id">Edit</a></td>
                     </tr>
                     }
                     
