--- a/SpanishWords/Views/Word/Index.cshtml
+++ b/SpanishWords/Views/Word/Index.cshtml
@@ -30,12 +30,11 @@
                         <td>@Model.Words[i].User.Login</td>
                         <td>@Model.Words[i].Statistic.TimesTrained</td>
                         <td><a asp-controller="Add" asp-action="Edit" asp-route-id="@Model.Words[i].Id">Edit</a></td>
+                        <td><a asp-controller="Add" asp-action="Delete" asp-route-id="@Model.Words[i].Id">Delete</a></td>
                     </tr>
                     }
                     
                 }
-               
-           
         </tbody>
     </table>
 </div>
