Moved Add controller into Word controller. Deleted unused Add View.

--- a/SpanishWords.Web/Views/Shared/_Layout.cshtml
+++ b/SpanishWords.Web/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Word" asp-action="Index">Show words</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Add" asp-action="Add">Add words</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Word" asp-action="Add">Add words</a>
                         </li>
                     </ul>
                 </div>
