--- a/SpanishWords.Web/Views/Word/Add.cshtml
+++ b/SpanishWords.Web/Views/Word/Add.cshtml
@@ -3,6 +3,7 @@
 <form method="post">
     <div class="form-group">
         <input hidden asp-for="@Model.Word.Id">
+        <input hidden asp-for="@Model.Word.StatisticId">    <!--Keeps StatisticId and resends it to HttpPost Edit method-->
         <label asp-for="@Model.Word.Spanish">@Model.Word.Spanish</label>
         <input asp-for="@Model.Word.Spanish">
     </div>
