--- a/SpanishWords.Web/Views/Word/Add.cshtml
+++ b/SpanishWords.Web/Views/Word/Add.cshtml
@@ -4,12 +4,24 @@
     <div class="form-group">
         <input hidden asp-for="@Model.Word.Id">
         <input hidden asp-for="@Model.Word.StatisticId">    <!--Keeps StatisticId and resends it to HttpPost Edit method-->
-        <label asp-for="@Model.Word.Spanish">@Model.Word.Spanish</label>
-        <input asp-for="@Model.Word.Spanish">
-    </div>
-    <div class="form-group">
-        <label asp-for="@Model.Word.English">@Model.Word.English</label>
+        <label asp-for="@Model.Word.English">English</label>
         <input asp-for="@Model.Word.English">
     </div>
+    <div class="form-group">
+        <label asp-for="@Model.Word.Spanish">Spanish</label>
+        <input asp-for="@Model.Word.Spanish">
+    </div>
+    <div>
+        <label asp-for="Word.GrammaticalGenderId">Select Gender</label>
+        <select asp-for="Word.GrammaticalGenderId" asp-items="@Model.GrammaticalGenders">
+            <option disabled selectd>--- Select Gender ---</option>
+        </select>
+    </div>
+    <div>
+        <label asp-for="Word.LexicalCategoryId">Select Lexical Category</label>
+        <select asp-for="Word.LexicalCategoryId" asp-items="@Model.LexicalCategories"></select>
+    </div>
     <button type="submit" class="btn btn-primary">Create</button>
+
+    
 </form>
