--- a/SpanishWords.Web/Views/Shared/_Layout.cshtml
+++ b/SpanishWords.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Word" asp-action="Add">Add words</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Study" asp-action="Index">Study mode</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
