--- a/SpanishWords.Web/Views/Study/Index.cshtml
+++ b/SpanishWords.Web/Views/Study/Index.cshtml
@@ -2,28 +2,18 @@
 
 
 
-<h2 class="alert-heading">@Model.RandomWord.English</h2> <!--- Ta propercja też jest ze starą wartością RandomWord --->
+<h2 class="alert-heading">@Model.RandomWord.English</h2>
 
 <form method="post">
     <div class="form-group">
-        @for (int i = 0; i < Model.WordsToAnswer.Count(); i++) 
-        {
-            <input hidden asp-for="@Model.WordsToAnswer[i].English" />
-            <input hidden asp-for="@Model.WordsToAnswer[i].Spanish" />
-            <input hidden asp-for="@Model.WordsToAnswer[i].Id" />
-            <input hidden asp-for="@Model.WordsToAnswer[i].GrammaticalGenderId" />
-            <input hidden asp-for="@Model.WordsToAnswer[i].LexicalCategoryId" />
-        }
-
         @for (int i = 0; i < Model.IndexesOfWordsAnswered.Count(); i++) 
         {
             <input hidden asp-for="@Model.IndexesOfWordsAnswered[i]" />
         }
-        <input hidden asp-for="@Model.RandomWord.Id" />                 <!-- Te 3 pola są generowane ze starą wartością cały czas (wartość z pierwszego generowania formularza) Wiem z debuggera w kontrolerze że  forularz dostaj aktualną propercję.-->
+        <input hidden asp-for="@Model.RandomWord.Id" />                 
         <input hidden asp-for="@Model.RandomWord.Spanish" />
         <input hidden asp-for="@Model.RandomWord.English" />
        
-
         <label asp-for="@Model.Answer">Translate @Model.RandomWord.English to Spanish:</label>
         <input asp-for="@Model.Answer" autofocus value="">
     </div>
