--- a/SpanishWords.Web/Views/Study/StudyComplete.cshtml
+++ b/SpanishWords.Web/Views/Study/StudyComplete.cshtml
@@ -1,9 +1,34 @@
 ﻿@model StudyViewModel
 
-
+<script src="/lib/jquery/dist/jquery.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 
 <h1>Congratulations!</h1>
 
 <a>You have answered all words correctly.</a>
 
+<script type="text/javascript">
+
+    toastr.options = {
+        "closeButton": false,
+        "debug": false,
+        "newestOnTop": true,
+        "progressBar": false,
+        "positionClass": "toast-bottom-right",
+        "preventDuplicates": false,
+        "onclick": null,
+        "showDuration": "300",
+        "hideDuration": "1000",
+        "timeOut": "5000",
+        "extendedTimeOut": "1000",
+        "showEasing": "swing",
+        "hideEasing": "linear",
+        "showMethod": "fadeIn",
+        "hideMethod": "fadeOut"
+    };
+  
+    toastr["success"]("Correct answer!", "Congratulations!");
+       
+    
+</script>
 
