--- a/SpanishWords.Web/Views/Study/Index.cshtml
+++ b/SpanishWords.Web/Views/Study/Index.cshtml
@@ -1,12 +1,5 @@
 ﻿@model StudyViewModel
 
-<script src="/lib/jquery/dist/jquery.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-
-
-
-
-
 <h2 class="alert-heading">@Model.RandomWord.English</h2>
 
 <form method="post">
@@ -29,7 +22,7 @@
 <a asp-controller="Home" asp-action="Index"><button class="btn btn-primary">Cancel study session.</button></a>
 
 <script type="text/javascript">
-
+    debugger;
     toastr.options = {
         "closeButton": false,
         "debug": false,
